@@ -1,5 +1,10 @@
 2020-12-31  Jay Berkenbilt  <ejb@ql.org>
 
+	* Rename QPDFPageObjectHelper::getPageImages to
+	QPDFPageObjectHelper::getImages and make it support form XObjects
+	as well as pages. The old name will be preserved for
+	compatibility.
+
 	* Add QPDFObjectHandle::isFormXObject to test whether an object is
 	a form XObject.
 
